# aoc

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: aoc.rs  lib.rs  main.rs  template.rs
src/y2015/: d1.rs  d10.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
src/y2020/: d1.rs  mod.rs
src/y2021/: d1.rs  d10.rs  d11.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
src/y2022/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d16.rs  d17.rs  d20.rs  mod.rs
src/y2023/: d01.rs  d02.rs  d03.rs  mod.rs
